# Coen244

./: .clang-format  CMakeLists.txt
A1/: Q1.cpp  Q1.h  Q2.cpp  Q2.h  Q3.cpp  Q3.h  Q4.cpp  Q4.h
A2/: AppointmentRequest.cpp  AppointmentRequest.h  AppointmentTime.cpp  AppointmentTime.h  ClinicManager.cpp  ClinicManager.h  Date.cpp  Date.h  Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  main.cpp  main.h
A3/: Date.h  Doctor.cpp  Doctor.h  HospitalManager.cpp  HospitalManager.h  Patient.cpp  Patient.h  Person.cpp  Person.h  main.cpp
A4/: ApartmentSale.cpp  ApartmentSale.h  Customer.cpp  Customer.h  Date.cpp  Date.h  HouseSale.cpp  HouseSale.h  LandSale.cpp  LandSale.h  Person.cpp  Person.h  Property.cpp  Property.h  RealEstateAgent.cpp  RealEstateAgent.h  RealEstateManager.cpp  RealEstateManager.h  main.cpp  main.h
A5/: ApartmentSale.cpp  Customer.cpp  Customer.h  Date.cpp  Date.h  HouseSale.h  LandSale.cpp  Person.cpp  Person.h  Property.cpp  Property.h  RealEstateAgent.cpp  RealEstateAgent.h  RealEstateManager.cpp  RealEstateManager.h  main.cpp
A6/: main.h
